[gd_scene load_steps=5 format=3 uid="uid://bnyojd8huir74"]

[ext_resource type="Script" uid="uid://1f14jnmj2v8k" path="res://scripts/instanced_attack.gd" id="1_53jwi"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i6i5y"]
height = 15.0
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i6i5y"]
transparency = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_uf05x"]
material = SubResource("StandardMaterial3D_i6i5y")
top_radius = 1.5
bottom_radius = 2.0
height = 15.0

[node name="Beam" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
script = ExtResource("1_53jwi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_i6i5y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_uf05x")

[node name="Timer" type="Timer" parent="."]

[connection signal="activate" from="." to="." method="_on_activate"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
